Nov 08, 2024
  curation: genes: xrefs: display_name now has a database prefix

Jul 18, 2024
  curation: added generation of allele association file
  curation: updated to schema 2.2.3

Jan 17, 2024
  updated scripts for regular submission: 7.0.0, schema 1.0.2.4

Jan 16, 2024
  updated dependencies
  
Dec 06, 2023
Dec 05, 2023
  CurationGeneGenerator - fixed cross-references

Nov 15, 2023
  CurationDafGenerator - updated to schema 1.11.0

Nov 14, 2023
  CurationAlleleGenerator - updated to schema 1.11.0

Nov 10, 2023
  CurationGeneGenerator - updated to schema 1.11.0
  CurationVariantGenerator - created for schema 1.11.0

Nov 09, 2023
  CurationAgmGenerator - updated to schema 1.11.0
  CurationAlleleGenerator - updated to schema 1.11.0

Oct 06, 2023
  updated submit_gff3.sh to submit to 6.0.0 bucket

Jun 19, 2023
  CurationDafGenerator -- added generation of cross references to OMIM genes
  CurationDafGenerator -- removal of duplicate annotations (human daf) -- fix

Jun 18, 2023
  CurationDafGenerator -- implemented removal of duplicate annotations (human daf)

Jul 17, 2023
  CurationAlleleGenerator -- updated to schema 1.7.4
    new format for notes: allele_notes_dto --> notes_dto
    also exporting allele descriptions (GENES.GENE_DESC) as notes of type 'comment' or 'mutation_description'

Jun 05, 2023
  updated script to submit GFF files to 5.4.0 S3 bucket

Jun 02, 2023
  CurationDafGenerator -- updated to schema 1.7.3
    disease_genetic_modifier_curie ==> disease_genetic_modifier_curies
  CurationAlleleGenerator -- updated to schema 1.7.3
    new format for allele_secondary_id_dtos
  CurationAGMGenerator -- updated to schema 1.7.3
    secondary_identifiers ==> agm_secondary_id_dtos
  CurationGeneGenerator -- updated to schema 1.7.3
    secondary_identifiers ==> gene_secondary_id_dtos

May 25, 2023
  CurationDafGenerator -- moved hard-coded qualifier mappings into properties file
    changed the qualifiers as follows (per SCRUM-2824):