@@ -26,10 +26,10 @@ dependencies {
     implementation ('org.apache.commons:commons-dbcp2:2.12.0') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.3'
-    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
-    implementation 'com.oracle.database.jdbc:ojdbc10:19.23.0.0'
-    implementation 'org.springframework:spring-jdbc:6.1.3'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.1'
+    implementation 'org.apache.logging.log4j:log4j-core:2.24.0'
+    implementation 'com.oracle.database.jdbc:ojdbc10:19.24.0.0'
+    implementation 'org.springframework:spring-jdbc:6.1.4'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
