@@ -1,3 +1,6 @@
+Nov 15, 2024
+  curation: genes: xrefs: fix: removed duplicate xrefs
+
 Nov 08, 2024
   curation: genes: xrefs: display_name now has a database prefix
 
